--- a/Login.html
+++ b/Login.html
@@ -23,8 +23,8 @@
 			
 				<a href ="./home.html">Home</a >
 				<a href="./AboutUs.html">About Us</a>
-				<a href="./ContactUs.html"> Contact Us</a>
-				<a href="./Product-non-member.html">Products</a> 
+				<a href="./ContactUs-nonmembers.html"> Contact Us</a>
+				<a href="./login.html">Products</a> 
 				<a href="./Help.html"> Help</a>
 				<a href="./Login.html" style="float:right;"> Login</a>
 		</nav>
@@ -34,18 +34,18 @@
 <div class="middle"> <p> </p><div><p> </p><div><p> <div></div></p> </div> <p> </p> <div></div></div><p></p><p> </p>  </div>
 <!-- middle div-->
 <div class="paraclass">
-			<!--  <img src="./Images/Login.jpg" alt="loginpageimg" style=" height:200px"/>
-			 -->
+			
+		
 			<br/><br/>
 			
-			<form method="GET" action="./validatetest.php" >
+			<form method="GET" action="./all-products.php" >
 				ABN:&emsp;&emsp;&emsp;<input type="text" name="abn" id="abn"><br/><br/> 
 				Username:&emsp;<input type="text" name="username" id="username"><br/><br/>
 				Password:&emsp;<input type="text" name="password" id="password"><br/></br>
 				
 				
-			&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<input type="submit" value="submit" >&emsp;
-			<a href ="./signup.html">Not a member</a>
+			&emsp;<input type="submit" value="submit" >&emsp;
+			<a href ="./signup.html">Not a member</a>&emsp;<a href ="./forgotpass.html">Forgot password</a>
 			</form>
 			<br/><br/><br/><br/><br/><br/>
 			
