--- a/Product-list.html
+++ b/Product-list.html
@@ -64,15 +64,13 @@
 			<div class="mediaContainer">
 				<!-- INSERT AUDIO -->
 				<!-- <img alt="CC0 Music" id="audioimg"src="./images/music.jpg">  -->
-				<audio controls autoplay>
-				<source  src="./audio/bluesky.mp3" type="audio/mp3"  />
 				
-				</audio>
 			</div>
+			
+			<H2 align="center">Please <A HREF="./Images/ClientApplicationForm.pdf" target="_blank">click</a> here to download and 
+			<a href="">email</a><br/>
 			<a href="./all-products.html" target="_self" >Products</a><br/><br/>
 			<a href="#top" target="_self" >Back to top</a>
-			<H2 align="center">Please <A HREF="./Images/ClientApplicationForm.pdf" target="_blank">click</a> here to download a form and post us to become a member</H2>
-			
 			<br/><br/>
 			
 			
