--- a/Signup.html
+++ b/Signup.html
@@ -34,7 +34,7 @@
 <div class="middle"> <p> </p><div><p> </p><div><p> <div></div></p> </div> <p> </p> <div></div></div><p></p><p> </p>  </div>
 <!-- middle div-->
 <div class="paraclass">
-			 <img src="./Images/Login.jpg" alt="loginpageimg" style="width:110%; height:300px" />
+			 <img src="./Images/Login.jpg" alt="loginpageimg" style="width:100%; height:300px" />
 			
 			<br/><br/>
 			
@@ -42,7 +42,7 @@
 			
 			<!-- APPLY A _self TARGET ATTRIBUTE -->
 </div><!-- paraclass div-->
-		<H2 align="center">Please <A HREF="/Images/ClientApplicationForm.pdf" target="_blank">click</a> here to download a form and post us to become a member</H2>
+		<H2 align="center">Please <A HREF="./Images/ClientApplicationForm.pdf" target="_blank">click</a> here to download a form and post us to become a member</H2>
 			
 			<br/><br/>
 	
