--- a/all-products.html
+++ b/all-products.html
@@ -8,6 +8,45 @@
 
 </HEAD>
 <BODY>
+<?php
+
+	session_name('users');
+	session_start(); 
+	
+	if (empty($_GET['username']) || empty($_GET['password']) || empty($_GET['abn']))
+	die("You need to enter a abn , username and a password."); 
+	$abn=$_GET['abn']; 
+	$username=$_GET['username'];
+	$password=$_GET['password'];
+	
+	
+	//open the server connection
+	require 'dbConnectHardwarestore.php'; 
+	//Check to see if a valid username & password exists
+	$sql = "SELECT username FROM users WHERE  username='$username' AND password='$password'";
+	$result = mysqli_query($conn, $sql) or die("Error reading users - ".mysqli_error($conn));
+	$numrows = mysqli_num_rows($result);
+	//there should be exactly one row with the correct abn, username and password
+	if ($numrows == 1)
+	{
+		//get the username
+		 $row = mysqli_fetch_array($result);
+		 
+		
+		$_SESSION['username'] = $username;
+		
+		
+		
+	}
+	else
+	{
+		echo 'The id or password was incorrect';
+		
+	}
+
+	
+?>
+
 <div class="content"> 
 <header>
 
@@ -64,7 +103,7 @@
 					<span>RyobiPruner $173.00</span><img src="./Images/RyobiPruner.png"  alt="RyobiPruner" style="width:20%" /><br/>
 					<span>VictaLawnmower $702.00</span><img src="./Images/VictaLawnmower.jpg"  alt="VictaLawnmower" style="width:20%" /><br/>
 			</p>
-			<H2 align="center">Please <A HREF="./Images/Product_order_Form.pdf" target="_blank">click</a> here to download a Product Order Form </H2>
+			<H2 align="center">Please <A HREF="./Images/Product_order_Form.pdf" target="_blank">click</a> here for Product Order Form </H2>
 			
 			<br/><br/>
 		<a href="#top" target="_self" >Back to top</a>
