--- a/Power_Tools.html
+++ b/Power_Tools.html
@@ -39,15 +39,16 @@
 <!-- middle div-->
 <div class="paraclass">
 			<!-- <img src="./images/chrome.png" alt="chrome logo"?> -->
-			
-			<p align="center">
-					<a href="./Power_Tools.html"align="left">Power Tools</a><br/>
+			<div id ="border">
+				<p align="center">
+					<a href="./Power_Tools.html">Power Tools</a><br/>
 					<br/><br/>
-					<img src="./Images/RyobiImpact.jpg"  alt="RyobiImpact" style="width:20%" />
-					<img src="./Images/RyobiCircular.jpg"  alt="RyobiCircular" width="20%" />
-					<img src="./Images/RyobiJigsaw.png"  alt="RyobiJigsaw" style="width:20%" />
-					<img src="./Images/RyobiBandsaw.jpg"  alt="RyobiBandsaw" style="width:20%" />
-					</p>
+					<span>RyobiImpact $153.00</span><img src="./Images/RyobiImpact.jpg"  alt="RyobiImpact" style="width:20%" /><br/>
+					<span>RyobiCircular $115.00</span><img src="./Images/RyobiCircular.jpg"  alt="RyobiCircular" width="20%" /><br/>
+					<span>RyobiJigsaw $89.00</span><img src="./Images/RyobiJigsaw.png"  alt="RyobiJigsaw" style="width:20%" /><br/>
+					<span>RyobiBandsaw $279.00</span><img src="./Images/RyobiBandsaw.jpg"  alt="RyobiBandsaw" style="width:20%" /><br/>
+				</p>
+			</div>
 					<a href="./General_Hardware.html">GeneralHardware</a><br/><br/>
 					<a href="./Garden_Tools.html">Garden Tools</a><br/><br/>
 					
