--- a/Garden_Tools.html
+++ b/Garden_Tools.html
@@ -14,7 +14,7 @@
 <header>
 
 	 <div class ="logo"> 
-	<img id ="logoimg" src="\Images\GAPHardware.png" alt="AHlogo" style="width:110px"> 
+	<img id ="logoimg" src=".\Images\GAPHardware.png" alt="AHlogo" style="width:110px"> 
 	 
 	</div> <!--logo--> 
 	
@@ -39,15 +39,16 @@
 <!-- middle div-->
 <div class="paraclass">
 			<!-- <img src="./images/chrome.png" alt="chrome logo"?> -->
-			
-			<p align="center">
+			<div id ="border">
+				<p align="center">
 					<a href="./Garden_Tools.html">Garden Tools</a><br/>
 					<br/><br/>
-					<img src="./Images/RyobiBlowerVac.png"  alt="RyobiBlowerVac" style="width:20%" />
-					<img src="./Images/RyobiBrushcutter.jpg"  alt="RyobiBrushcutter"style="width:20%" />
-					<img src="./Images/RyobiPruner.png"  alt="RyobiPruner" style="width:20%" />
-					<img src="./Images/VictaLawnmower.jpg"  alt="VictaLawnmower" style="width:20%" />
-			</p>
+					<span> RyobiBlowerVac $44.00</span><img src="./Images/RyobiBlowerVac.png"  alt="RyobiBlowerVac" style="width:20%" /><br/>
+					<span>RyobiBrushcutter $219.00</span><img src="./Images/RyobiBrushcutter.jpg"  alt="RyobiBrushcutter"style="width:20%" /><br/>
+					<span>RyobiPruner $173.00</span><img src="./Images/RyobiPruner.png"  alt="RyobiPruner" style="width:20%" /><br/>
+					<span>VictaLawnmower $702.00</span><img src="./Images/VictaLawnmower.jpg"  alt="VictaLawnmower" style="width:20%" /><br/>
+				</p>	
+			</div>
 			
 			<a href="./General_Hardware.html">GeneralHardware</a><br/><br/>
 			<a href="./Power_Tools.html"align="left">Power Tools</a><br/><br/>
