--- a/Help.html
+++ b/Help.html
@@ -7,63 +7,70 @@
 		<link rel ="stylesheet" type="text/css" href ="style1.css">
 
 </HEAD>
+
 <BODY>
+
 <div class="content"> 
+
 <header>
-
-
-	<div class ="logo"><img id ="logoimg" src=".\Images\GAPHardware.png" alt="AHlogo" style="width:110px"> 
-	
-	 
+	<div class ="logo"><img id ="logoimg" src="./Images/GAPHardware.png" alt="AHlogo" style="width:110px"/> 
+	 <span  style="font-size:35px;margin-left:150px;"> GAP HARDWARE STORE</span>
 	</div><!--logo-->
-
-	
 	<div class ="menu">
 		<nav>
-			
-				<a href ="./home.html">Home</a >
-				<a href="./AboutUs.html">About Us</a>
-				<a href="./ContactUs.html"> Contact Us</a>
-				<a href="./Product-non-member.html">Products</a> 
-				<a href="./Help.html"> Help</a>
+			<a href ="./home.html">Home</a >
+			<a href="./AboutUs.html">About Us</a>
+			<a href="./ContactUs.html"> Contact Us</a>
+			<a href="./Product-non-member.html">Products</a> 
+			<a href="./Help.html"> Help</a>
 				<a href="./Login.html" style="float:right;"> Login</a>
 		</nav>
 	</div><!--menu-->
-
 </header>
-<div class="middle"> <p> </p><div><p> </p><div><p> <div></div></p> </div> <p> </p> <div></div></div><p></p><p> </p>  </div>
+
+<div class="middle"> 
+		<p> </p>
+		<div>
+			<p> </p>
+			<div> 
+				<div></div>  
+				<div>
+					<p> </p>
+				</div>
+				<p></p>
+				<p> </p>
+			</div>
+		</div>
+		<p></p>
 <!-- middle div-->
 <div class="paraclass">
-			<!-- <img src="./Images/Login.jpg" alt="loginpageimg"width="100%" height="200px"/>
-		 -->
+		<h4>Help line Numbers</h4>
 			
-			<h4>Help line Numbers</h4>
+		<p style="width:30%;">
+		<b>General Enquiries: </b><br/>
+		For products, sales, pricing and other general enquiries<br/>
+		Email:  general@gaphware.com.au<br/>
+		Phone:  (02) 6111 0001</p><br/>
 			
-			<p style="width:33%;float:left;">
-			<b>General Enquiries: </b><br/>
-			For products, sales, pricing and other general enquiries<br/>
-			Email:  general@gaphware.com.au<br/>
-			Phone:  (02) 6111 0001</p><br/>
-			
-			<p style="width:33%; ">
-			<b>Account Enquiries:</b><br/>
-			For all account enquiries for new and existing clients<br/>
-			Email:  accounts@gaphware.com.au<br/>
-			Phone:  (02) 6111 0002</p>
- 
-			<p style="width:33%;">
-			<b>Technical/Website Enquiries:</b> <br/>
-			For all technical support enquiries<br/>
-			Email:  techsupport@gaphware.com.au<br/>
-			Phone:  (02) 6111 0003<br/>
+		<p style="width:30%; ">
+		<b>Account Enquiries:</b><br/>
+		For all account enquiries for new and existing clients<br/>
+		Email:  accounts@gaphware.com.au<br/>
+		Phone:  (02) 6111 0002</p><br/>
 
-			</p>
-			<p></p><p></p><p><br/><br/></p><br></br>
-			<p></p><br></br>
-			
-			<!-- APPLY A _blank TARGET ATTRIBUTE -->
-			
-			<a href="#top" target="_self">Back to top</a>
+		<p style="width:30%;">
+		<b>Technical/Website Enquiries:</b> <br/>
+		For all technical support enquiries<br/>
+		Email:  techsupport@gaphware.com.au<br/>
+		Phone:  (02) 6111 0003<br/>
+
+		</p>
+		<p></p><p></p><p><br/><br/></p><br><br/>
+		<p></p><br><br/>
+		
+		<!-- APPLY A _blank TARGET ATTRIBUTE -->
+		
+		<a href="#top" target="_self">Back to top</a>
 			<!-- APPLY A _self TARGET ATTRIBUTE -->
 </div><!-- paraclass div-->
 		
