--- a/Product-list.html
+++ b/Product-list.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML>
 
+
 <HTML lang="en">
 <HEAD>
 <title>GAP HARDWARE Product - list</title>
-		<meta charset="UTF-8">
 		<link rel ="stylesheet" type="text/css" href ="style1.css">
+		<meta charset="UTF-8">
 
+		
 </HEAD>
 <BODY>
 <div class="content"> 
 <header>
-
-
-	<div class ="logo"><img id ="logoimg" src=".\Images\GAPHardware.png" alt="AHlogo" style="width:110px"> 
-	
+	<div class ="logo"><img id ="logoimg" src="./Images/GAPHardware.png" alt="AHlogo" style="width:110px" /> 
+	<span  style="font-size:35px;margin-left:150px;"> GAP HARDWARE STORE</span>
 	 
 	</div><!--logo-->
 
@@ -31,62 +31,76 @@
 	</div><!--menu-->
 
 </header>
-<div class="middle"> <p> </p><div><p> </p><div><p> <div></div> </div> <p> </p> <div></div></div><p></p><p> </p>  </div>
+<div class="middle">    
+		<p> </p>
+		<div>
+			<p> </p>
+			<div> 
+				<div></div>  
+				<div>
+					<p> </p>
+				</div>
+				<p></p>
+				<p> </p>
+			</div>
+		</div>
+		<p></p>
 <div class="paraclass">
 			<!-- <img src="./images/chrome.png" alt="chrome logo"?> -->
 			
 			
 			
-			<p ><h3 style="text-align:center;">Product List</h3></p>
-			<p></p>
+		<h3 style="text-align:center;">Product List</h3>
+		
+		
+		<a href="./General_Hardware.html">general hardware</a><br/>
+		<ul id="ghlist">
+			<li>Stanley FatMax 20oz Claw Hammer - $48.90</li>
+			<li>Stanley 20pc Screwdriver Set - $28.99</li>
+			<li>Stanley 31pc Bit Set - $29.80</li>
+			<li>Trojan 11pc Ratcheting Wrench Set  - $17.99</li>
+		</ul>
+		<a href="./Power_Tools.html" >power tools</a>
+		<ul id="pwlist">
+				<li>Ryobi One+ 18V 3-Speed Impact Wrench – $153.00</li>
+				<li>Ryobi One+ 18V 165mm Circular Saw - $115.00</li>
+				<li>Ryobi One+ 18V Cordless Jigsaw - $89.00</li>
+				<li>Ryobi 350W 230mm Bandsaw - $279.00</li>
+		</ul>
+		<a href="./Garden_Tools.html">garden tools</a>
+		<ul id="gtlist">
+				<li>Ryobi Blower Vacuum Kit - $44.00</li>
+				<li>Ryobi One+ 25.4cc Easy Start Brushcutter - $219.00</li>
+				<li>Ryobi One+ 18V Cordless Pole Pruner - $173.00</li>
+				<li>Victa Mustang 19” Alloy Lawn Mower - $702.00</li>
+		</ul>
+		
+		<br/>
+		<div class="mediaContainer">
+			<!-- INSERT AUDIO -->
+			<!-- <img alt="CC0 Music" id="audioimg"src="./images/music.jpg">  -->
 			
-			<ul id="ghlist"><a href="./General_Hardware.html">general hardware</a><br/>
-			
-				<li>Stanley FatMax 20oz Claw Hammer - $48.90</li>
-				<li>Stanley 20pc Screwdriver Set - $28.99</li>
-				<li>Stanley 31pc Bit Set - $29.80</li>
-				<li>Trojan 11pc Ratcheting Wrench Set  - $17.99</li>
-			</ul>
-			<ul id="pwlist"><a href="./Power_Tools.html" >power tools</a>
-					<li>Ryobi One+ 18V 3-Speed Impact Wrench – $153.00</td>
-					<li>Ryobi One+ 18V 165mm Circular Saw - $115.00</li>
-					<td>Ryobi One+ 18V Cordless Jigsaw - $89.00</li>
-					<td>Ryobi 350W 230mm Bandsaw - $279.00</li>
-			</ul>
-			<ul id="gtlist"><a href="./Garden_Tools.html">garden tools</a>
-					<li>Ryobi Blower Vacuum Kit - $44.00</li>
-					<li>Ryobi One+ 25.4cc Easy Start Brushcutter - $219.00</li>
-					<li>Ryobi One+ 18V Cordless Pole Pruner - $173.00</li>
-					<li>Victa Mustang 19” Alloy Lawn Mower - $702.00</li>
-			</ul>
-			
-			<p></p>
-			<div class="mediaContainer">
-				<!-- INSERT AUDIO -->
-				<!-- <img alt="CC0 Music" id="audioimg"src="./images/music.jpg">  -->
-				<audio controls autoplay>
-				<source  src="./audio/bluesky.mp3" type="audio/mp3"  />
-				
-				</audio>
-			</div>
-			<a href="./all-products.html" target="_self" >Products</a><br/><br/>
-			<a href="#top" target="_self" >Back to top</a>
-			<H2 align="center">Please <A HREF="./Images/ClientApplicationForm.pdf" target="_blank">click</a> here to download a form and post us to become a member</H2>
-			
-			<br/><br/>
-			
-			
-			<!-- APPLY A _self TARGET ATTRIBUTE -->
 		</div>
+		
+		<H2 >Please <A HREF="./Images/ClientApplicationForm.pdf" target="_blank">click</a> here to download and 
+		<a href="">email</a><br/></h2>
+		<a href="./all-products.html" target="_self" >Products</a><br/><br/>
+		<a href="#top" target="_self" >Back to top</a>
+		<br/><br/>
+			
+		
+			<!-- APPLY A _self TARGET ATTRIBUTE -->
+</div><!--para class-->
+		
 		
 <footer >
 
-		<div class ="bottom">
+	<div class ="bottom">
 
-		<p style="background-color:rgb(67,70,75); color:white;"> &copy; All Copy rights reserved
-		<!-- <p> &copy; All Copy rights reserved</p> -->
-		<img src="./Images/twitter.jpg" alt="twitter" style="width:30px"/>&emsp;<img src="./Images/fb.jpg" alt="fb" style="width:30px"/></p>
-		</div>
+	<p style="background-color:rgb(67,70,75); color:white;"> &copy; All Copy rights reserved
+	<!-- <p> &copy; All Copy rights reserved</p> -->
+	<img src="./Images/twitter.jpg" alt="twitter" style="width:30px"/>&emsp;<img src="./Images/fb.jpg" alt="fb" style="width:30px"/></p>
+	</div>
 </footer><!--footer-->
 </div>
 </div>
