--- a/Signup.html
+++ b/Signup.html
@@ -5,50 +5,63 @@
 <title>GAP HARDWARE Signup</title>
 		<meta charset="UTF-8">
 		<link rel ="stylesheet" type="text/css" href ="style1.css">
+		<style>
+			h2 {
+			
+				text-align:center;
+			}
+		
+		</style>
 
 </HEAD>
 <BODY>
 <div class="content"> 
 <header>
-
-
-	<div class ="logo"><img id ="logoimg" src=".\Images\GAPHardware.png" alt="AHlogo"style="width:110px"> 
-	
+	<div class ="logo"><img id ="logoimg" src="./Images/GAPHardware.png" alt="AHlogo" style="width:110px" /> 
+	<span  style="font-size:35px;margin-left:150px;"> GAP HARDWARE STORE</span>
 	
 	</div><!--logo-->
-
-	
 	<div class ="menu">
 		<nav>
-			
-				<a href ="./index1.html">Home</a >
-				<a href="./AboutUs.html">About Us</a>
-				<a href="./ContactUs.html"> Contact Us</a>
-				<a href="./Product-non-member.html">Products</a> 
-				<a href="./Help.html"> Help</a>
-				<a href="./Login.html" style="float:right;"> Login</a>
+			<a href ="./index1.html">Home</a >
+			<a href="./AboutUs.html">About Us</a>
+			<a href="./ContactUs.html"> Contact Us</a>
+			<a href="./Product-non-member.html">Products</a> 
+			<a href="./Help.html"> Help</a>
+			<a href="./Login.html" style="float:right;"> Login</a>
 		</nav>
 	</div><!--menu-->
 
 </header>
-<div class="middle"> <p> </p><div><p> </p><div><p> <div></div></p> </div> <p> </p> <div></div></div><p></p><p> </p>  </div>
+<div class="middle">  
+
+		<p> </p>
+		<div>
+			<p> </p>
+			<div> 
+				<div></div>  
+				<div>
+					<p> </p>
+				</div>
+				<p></p>
+				<p> </p>
+			</div>
+		</div>
+		<p></p>
+
 <!-- middle div-->
 <div class="paraclass">
-			 <img src="./Images/Login.jpg" alt="loginpageimg" style="width:110%; height:300px" />
+			 <img src="./Images/Login.jpg" alt="loginpageimg" style="width:100%; height:300px" />
 			
 			<br/><br/>
-			
-			
 			
 			<!-- APPLY A _self TARGET ATTRIBUTE -->
 </div><!-- paraclass div-->
-		<H2 align="center">Please <A HREF="/Images/ClientApplicationForm.pdf" target="_blank">click</a> here to download a form and post us to become a member</H2>
-			
-			<br/><br/>
+		<H2 >Please <A HREF="./Images/ClientApplicationForm.pdf" target="_blank">click</a> here to download a form and <a href="general@gaphware.com.au">E-mail</a> us to become a member</H2>
+		<br/><br/>
 	
 <footer >
-
-		<div class ="bottom">
+	<div class ="bottom">
 
 		<p style="background-color:rgb(67,70,75); color:white;"> &copy; All Copy rights reserved
 		<!-- <p> &copy; All Copy rights reserved</p> -->
